Code cleanup and comments.

--- a/README
+++ b/README
@@ -2,15 +2,16 @@ WMS-Mash is a WMS bookmarking service that allows you to gather data
 from various WMS servers and organize thematic virtual servers ("WMS
 relays").
 
-User frontend will be implemented with Django, and relay is
-implemented with Twisted.  PostgreSQL is used as a database backend.
+User frontend is implemented with Django, and relay is implemented
+with Twisted.  PostgreSQL is used as a database backend.
 
 WMS is a Web Map Service
 http://en.wikipedia.org/wiki/Web_Map_Service
 
 Dependencies:
 
- * twisted (tested with 9.0.0 and 10.1.0)
- * lxml (2.2.8)
+ * twisted (tested with 9.0.0-12.3.0)
+ * lxml (2.2.8-3.2.1)
  * txpostgres (tested with 0.3.0) and psycopg-2.2.2
- * PIL (Python Imaging Library, tested with 1.1.7)
+ * PIL (Python Imaging Library, tested with 1.1.7) or Pillow
+   (tested with 2.0.0).
